# triage

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml  test_compare
.github/: minisign.pub
.github/actions/setup-flatc/: action.yml
.github/workflows/: ci.yml  publish.yml
crates/argus-core/src/: config.rs  logging.rs  session.rs
crates/argus-daemon/: Cargo.toml
crates/argus-daemon/src/: ipc.rs  main.rs  session.rs  ws.rs
crates/argus-mcp/: Cargo.toml
crates/argus-mcp/src/: main.rs
crates/argus-transport-ws/: Cargo.toml
crates/argus-transport-ws/src/: lib.rs
crates/argus-tui/: Cargo.toml
crates/argus-tui/src/: lib.rs  main.rs
crates/triage/: Cargo.toml  README.md
crates/triage-core/: Cargo.toml  README.md  build.rs
crates/triage-core/schema/: triage.fbs
crates/triage-core/src/: config.rs  flatbuffers_proto.rs  lib.rs  logging.rs  session.rs
crates/triage-mcp/: Cargo.toml  README.md
crates/triage-mcp/src/: main.rs
crates/triage-test-support/: Cargo.toml
crates/triage-test-support/src/: lib.rs  snapshots.rs  terminal_acceptance.rs  vt.rs
crates/triage-test-support/tests/: alacritty_engine_spike.rs  snapshot_harness.rs  terminal_acceptance.rs  vt_fixture.rs  wezterm_engine_spike.rs
crates/triage-test-support/tests/snapshots/: alacritty_engine_spike__alacritty_engine_visible_snapshots.snap  snapshot_harness__sample_renderer_frame.snap  terminal_acceptance__terminal_acceptance_scenarios.snap  vt_fixture__vt_transcript.snap  wezterm_engine_spike__wezterm_engine_visible_snapshots.snap
crates/triage-transport-ws/: Cargo.toml  README.md
crates/triage-transport-ws/benches/: protocol_bench.rs
crates/triage-transport-ws/src/: flatbuffers_proto.rs  lib.rs
crates/triage/src/: lib.rs  main.rs
crates/triaged/: Cargo.toml  README.md  build.rs
crates/triaged/src/: handover.rs  handover_tests.rs  http.rs  http_tests.rs  ipc.rs  lib.rs  main.rs  service.rs  session.rs  summarizer.rs  update.rs  ws.rs
crates/triaged/web_fallback/: index.html
devlog/: 000018-fix-input-background-bleed.md  000019-feat-session-context.md  000019-fix-tui-shift-tab-input.md  000020-fix-devlog-collision.md  000021-fix-devlog-collision.md  000022-feat-mcp-stdio-session-tools.md  000023-feat-session-persistence.md  000024-codex-submit-clears-input.md  000024-feat-shell-session-restore.md  000025-feat-session-pane-scroll.md  000025-feat-websocket-session-api.md  000026-experiment-flutter-spike.md  000026-feat-flutter-web-terminal-spike.md  000027-refactor-rename-to-triage.md  000028-feat-remote-pairing-auth.md  000029-fix-terminal-layout.md  000030-fix-session-restore-newlines.md  000031-feat-zero-downtime-handover.md  000032-feat-embedded-http-server.md  000033-fix-unix-ipc-build.md  000034-feat-flatbuffers-protocol.md  000035-chore-use-tattoy-crates.md  000036-chore-prepare-release.md  000037-fix-publish-dry-run.md  000038-upgrade-flutter-deps.md  000039-fix-ws-subprotocol-json.md  000040-feat-client-flatbuffers-sending.md  000041-fix-tui-mac-tab-shortcuts.md  000042-fix-flutter-session-loading-placeholders.md  000043-fix-daemon-input-after-restart.md  000044-chore-bump-triage-0.1.1.md  000045-fix-web-shell-menu-platforms.md  000046-fix-device-specific-pins.md  000047-feat-flutter-mobile-client.md  000048-chore-bump-version-0.1.2.md  000049-docs-triaged-web-server-pairing.md  000050-ci-publish-github-release.md  000051-ci-multiplatform-release-clients.md  000052-chore-rename-desktop-apps.md  000053-ci-opt-into-node24.md  (+75 more)
devlog/plans/: 000018-01-input-background-bleed-review.md  000019-01-session-context.md  000019-01-tui-shift-tab-input.md  000020-01-devlog-collision.md  000021-01-devlog-collision.md  000022-01-mcp-stdio-session-tools.md  000023-01-session-persistence.md  000024-01-codex-submit-clears-input.md  000024-01-shell-session-restore.md  000025-01-session-pane-scroll.md  000025-01-websocket-session-api.md  000026-01-flutter-spike.md  000026-01-flutter-web-terminal-spike.md  000026-02-fix-closed-stream-input.md  000026-02-xterm-js-web-bridge.md  000026-03-interactive-resize.md  000026-03-suppress-json-broken-pipe-warning.md  000027-01-rename-to-triage.md  000028-01-remote-pairing-auth.md  000028-02-address-pr-comments.md  000028-03-fix-session-loading.md  000028-04-fix-terminal-input-focus.md  000028-05-persist-flutter-client-id.md  000028-06-disconnected-input-guard.md  000029-01-fix-terminal-layout.md  000029-02-fix-scrollback-regression.md  000029-03-fix-input-and-newlines.md  000029-04-fix-empty-viewport-input.md  000029-05-fix-input-lease-and-suppression.md  000029-06-fix-terminal-input-routing.md  000029-07-simplify-terminal-input-routing.md  000029-08-real-browser-integration-testing.md  000029-09-fix-initial-refresh-layout.md  000030-01-session-restore-newlines.md  000030-02-address-pr-comments.md  000031-01-zero-downtime-handover.md  000031-02-address-pr-comments.md  000031-03-fix-backspace-and-cursor-misplacement.md  000031-04-fix-cursor-offsets-and-range-errors.md  000031-05-fix-exited-session-cursor-alignment.md  (+102 more)
docs/: release-signing.md  remote-access.md
flutter/argus_client/: README.md  analysis_options.yaml  pubspec.yaml
flutter/argus_client/lib/: main.dart
flutter/argus_client/test/: argus_ws_client_test.dart  input_display_test.dart  widget_test.dart
flutter/argus_client/web/: index.html  manifest.json  terminal_bridge.js  xterm-addon-fit.js
flutter/triage_client/: .gitignore  README.md  package-lock.json  package.json  playwright.config.js  pubspec.yaml  server.js
flutter/triage_client/android/: .gitignore
flutter/triage_client/lib/: main.dart  platform_env_io.dart  platform_env_web.dart
flutter/triage_client/linux/: CMakeLists.txt
flutter/triage_client/test/: cursor_position_test.dart  server_store_test.dart  session_rail_identity_test.dart  terminal_accessory_bar_test.dart  terminal_control_byte_test.dart  terminal_controller_refit_test.dart  terminal_session_input_router_test.dart  triage_websocket_client_test.dart  widget_test.dart
scripts/: bump-version.sh  install.sh
(+57 files in other folders)
