[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.0.0"
license = "Apache-2.0"
repository = "https://github.com/hyeons-lab/triage"
authors = ["Hyeons' Lab <info@hyeons-lab.com>"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
crossterm = "0.28"
insta = "1"
portable-pty = "0.9"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
unicode-width = "0.2"
vte = "0.15"
wezterm-term = { git = "https://github.com/wezterm/wezterm.git", rev = "577474d89ee61aef4a48145cdec82a638d874751" }
wezterm-surface = { git = "https://github.com/wezterm/wezterm.git", rev = "577474d89ee61aef4a48145cdec82a638d874751" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

