[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.3"
license = "Apache-2.0"
repository = "https://github.com/hyeons-lab/triage"
homepage = "https://github.com/hyeons-lab/triage"
authors = ["Hyeons' Lab <info@hyeons-lab.com>"]
keywords = ["terminal", "pty", "supervisor", "ratatui", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
triage-core = { version = "0.1.1", path = "crates/triage-core" }
triage-transport-ws = { version = "0.1.1", path = "crates/triage-transport-ws" }
triaged = { version = "0.1.1", path = "crates/triaged" }
anyhow = "1"
base64 = "0.22"
crossterm = "0.28"
insta = "1"
portable-pty = "0.9"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
unicode-width = "0.2"
vte = "0.15"
tattoy-wezterm-term = "0.1.0-fork.5"
tattoy-wezterm-surface = "0.1.0-fork.2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
flatbuffers = "24.3.25"


