[package]
name = "argus-daemon"
description = "Long-running daemon that owns Argus terminal session state."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
anyhow.workspace = true
portable-pty.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
unicode-width.workspace = true
wezterm-term.workspace = true
wezterm-surface.workspace = true
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
argus-transport-ws = { path = "../argus-transport-ws" }

[lints]
workspace = true
