[package]
name = "argus-mcp"
description = "MCP server exposing Argus terminal sessions to local AI agents."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
argus-core = { path = "../argus-core" }
argus-daemon = { path = "../argus-daemon" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
