[package]
name = "argus-transport-ws"
description = "WebSocket session transport adapter for Argus remote clients."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
argus-core = { path = "../argus-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tungstenite.workspace = true

[lints]
workspace = true
