[package]
name = "argus-tui"
description = "Ratatui local client for the Argus terminal supervisor."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
argus-daemon = { path = "../argus-daemon" }
anyhow.workspace = true
base64.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tracing.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
