[package]
name = "triage-core"
description = "Shared session trait and types for Triage, the attention-routing terminal supervisor."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
flatbuffers.workspace = true

[lints]
workspace = true
