[package]
name = "triage-test-support"
description = "Reusable acceptance-test helpers for Triage renderer snapshots and terminal byte streams."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
alacritty_terminal = { version = "0.26.0", optional = true }
vte.workspace = true
tattoy-wezterm-term = { workspace = true, optional = true }

[features]
engine-spikes = ["dep:alacritty_terminal", "dep:tattoy-wezterm-term"]

[dev-dependencies]
insta.workspace = true

[[test]]
name = "alacritty_engine_spike"
path = "tests/alacritty_engine_spike.rs"
required-features = ["engine-spikes"]

[[test]]
name = "wezterm_engine_spike"
path = "tests/wezterm_engine_spike.rs"
required-features = ["engine-spikes"]
