[package]
name = "triage-transport-ws"
description = "WebSocket session transport adapter for Triage remote clients."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
triage-core = { path = "../triage-core" }
serde.workspace = true
serde_json.workspace = true
flatbuffers.workspace = true

[lints]
workspace = true
