[package]
name = "triage-transport-ws"
description = "WebSocket session transport adapter for Triage remote clients."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
triage-core = { path = "../triage-core" }
serde.workspace = true
serde_json.workspace = true
flatbuffers.workspace = true
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[features]
default = []
stress-client = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]

[[bin]]
name = "stress_client"
required-features = ["stress-client"]

[lints]
workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "protocol_bench"
harness = false
