[package]
name = "triage-transport-ws"
description = "WebSocket session transport adapter for Triage remote clients."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
triage-core.workspace = true
serde.workspace = true
serde_json.workspace = true
flatbuffers.workspace = true
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

[[bin]]
name = "stress_client"

[lints]
workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "protocol_bench"
harness = false
