[package]
name = "triage"
description = "Ratatui local client for the Triage terminal supervisor."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
triage-core.workspace = true
triaged.workspace = true
anyhow.workspace = true
base64.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tracing.workspace = true
unicode-width.workspace = true
serde_json = { workspace = true }

[lints]
workspace = true
