[package]
name = "triaged"
description = "Long-running daemon that owns Triage terminal session state."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
triage-core = { path = "../triage-core" }
anyhow.workspace = true
portable-pty.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
unicode-width.workspace = true
wezterm-term.workspace = true
wezterm-surface.workspace = true
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
triage-transport-ws = { path = "../triage-transport-ws" }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http-body-util = "0.1"
rust-embed = { version = "8", features = ["compression"] }
bytes = "1"
http = "1"
flate2 = "1"

[lints]
workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
