[package]
name = "triaged"
description = "Long-running daemon that owns Triage terminal session state and serves a built-in web client and WebSocket API for PIN-paired remote attach."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = [
    "src/**/*",
    "dist/*.css",
    "dist/*.html",
    "dist/*.js",
    "dist/*.json",
    "dist/*.png",
    "dist/assets/**/*",
    "dist/icons/**/*",
    "Cargo.toml",
    "README.md",
    "build.rs",
    "web_fallback/**/*"
]

[dependencies]
triage-core.workspace = true
anyhow.workspace = true
portable-pty.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
unicode-width.workspace = true
tattoy-wezterm-term.workspace = true
tattoy-wezterm-surface.workspace = true
tokio = { workspace = true, features = ["process"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
triage-transport-ws.workspace = true
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
cera = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http-body-util = "0.1"
rust-embed = { version = "8", features = ["compression"] }
bytes = "1"
http = "1"
flate2 = "1"

[lints]
workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Cross-platform local IPC: maps the daemon's control socket to a Windows named
# pipe (\\.\pipe\triage-<user>). Unix keeps using std::os::unix::net.
interprocess = "2.4"
